# django-pgpubsub

./: .dockerignore  .env.dev  .env.template  .gitignore  .readthedocs.yml  CONTRIBUTING.rst  Dockerfile.dev  IMG_2677.MOV  Makefile  Pipfile  README.html  README.md  README.rst  docker-compose.yml  docker_entrypoint.sh  manage.py  notes.md  notes.txt  pyproject.toml  pytest.ini  settings.py  setup.cfg  temple.yaml  tox.ini
.circleci/: config.yml
.db/base/1/: 1249  1255_vm  1259  13295  13300_vm  13304  13305_vm  13310  13314  2603_vm  2618_vm  2619_vm  2658  2659  2665  2673  2678  2679  2682  2684  2690  2838  2840  2840_vm  2841  3081  3164  3394  3395  3455  3456  3600  3600_vm  3602  3602_vm  3764  3764_vm
.db/base/13444/: 1247  1247_vm  1259  13295_vm  13299  13300  13305  2579  2600_vm  2602_vm  2606  2606_vm  2607_vm  2608_vm  2609  2609_vm  2610  2612_vm  2662  2663  2666  2674  2675  2685  2692  2693  2696  2703  2753_vm  2838_fsm  2839  3079  3079_vm  3085  3456_vm  3541_vm  3601_vm  3603_vm  3604  3605  (+3 more)
.db/base/13445/: 1249_vm  1255  1259_vm  13309  13310_vm  2601_vm  2605_vm  2608  2610_vm  2612  2615  2615_vm  2616_vm  2617_vm  2618  2619  2664  2667  2681  2691  2704  2838_vm  3080  3394_vm  3603  3608  3766  pg_internal.init
.db/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
.db/pg_stat/: db_0.stat  db_13445.stat  global.stat
.github/workflows/: run_tests.yml
docs/: Makefile  api.rst  channels.rst  conf.py  exactly_once_messaging.rst  example_app.rst  index.rst  installation.rst  listeners.rst  listening.rst  listening.rst.orig  metrics.rst  notifications.rst  payload_context.rst  payload_extras.rst  recovery.rst  requirements.in  requirements.txt  toc.rst
pgpubsub/: __init__.py  apps.py  channel.py  compatibility.py  listen.py  listeners.py  metrics.py  models.py  notify.py  settings.py  triggers.py
pgpubsub/management/commands/: listen.py  monitor_listener.py
pgpubsub/migrations/: 0001_initial.py  0002_notification_created_at.py  0003_notification_db_version.py  0004_notification_pgpubsub_notification_set_db_version.py  0005_alter_notification_options.py  0005_auto_20230516_1148.py  0006_payload_stores_proper_jsonb.py
pgpubsub/tests/: apps.py  channels.py  conftest.py  connection.py  listeners.py  models.py  test_core.py  test_deserialize.py  test_metrics.py  test_notification_processors.py  test_payload_context.py  test_payload_extras.py  test_trigger_deserialize.py  tests.py
pgpubsub/tests/migrations/: 0001_initial.py  0002_author_pgpubsub_160cf_media_pgpubsub_a83de_and_more.py  0002_auto_20230411_0829.py  0003_alter_author_user.py  0003_auto_20230516_0605.py  0003_auto_20230516_1151.py  0004_alter_author_user.py  0004_alter_media_id.py  0004_auto_20230516_1148.py  0005_remove_post_pgpubsub_72091_post_pgpubsub_72091.py  0005_rename_id_media_key.py  0006_child_parent.py  0006_remove_post_pgpubsub_72091_post_pgpubsub_72091.py  0007_author_alternative_name.py  0007_child_pgpubsub_89ef9.py  0008_alter_author_profile_picture.py  0008_alter_parent_key.py  0009_auto_20230522_0720.py  0010_media_store_id.py  0011_payload_stores_proper_jsonb.py  0012_payload_context.py  0012_payload_extras.py  0013_empty_pg_setting_handling.py  0013_id_only_notify_payload_for_lockable_notifications.py  0014_id_only_notify_payload_for_lockable_notifications.py
