[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36']
skip-string-normalization = true

[tool.poetry]
name = "django-pgpubsub"
packages = [
  { include = "pgpubsub" }
]
version = "0.0.0"
description = "Djagno integration with Postgres LISTEN and NOTIFY"
authors = ["Opus 10 Engineering"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/Opus10/django-pgpubsub"
repository = "https://github.com/Opus10/django-pgpubsub"
documentation = "https://django-pgpubsub.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.6.2,<4"
django = ">=2"

[tool.poetry.dev-dependencies]
black = "21.5b1"
dj-database-url = "0.5.0"
flake8 = "3.9.2"
flake8-bugbear = "21.4.3"
flake8-comprehensions = "3.5.0"
flake8-import-order = "0.18.1"
flake8-logging-format = "0.6.0"
flake8-mutable = "1.2.0"
packaging = "19.2"
pip = "*"
pre-commit = "2.13.0"
psycopg2-binary = "2.8.6"
pytest = "6.2.4"
pytest-cov = "2.12.0"
pytest-dotenv = "0.5.2"
pytest-django = "4.3.0"
requests = "2.25.1"
Sphinx = "4.0.2"
sphinx-rtd-theme = "0.5.2"
temple = "*"
tox = "3.23.1"
zipp = "3.4.1"
